# tree-sitter-cloudflare

./: .envrc  Cargo.toml  README.md  binding.gyp  grammar.js  package.json  shell.nix
.github/workflows/: test.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: complex.txt  precedence.txt  simple.txt
examples/: simple.cf.txt  simple.cfrule
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: arrays.txt  complex.txt  edge.txt  errors.txt  functions.txt  precedence.txt  simple.txt
test/validations/: go.mod  validator.go  validator_test.go
tests/: validation.rs
