[package]
name = "tree-sitter-cloudflare"
description = "cloudflare grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "cloudflare"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-cloudflare"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["blocking"] }
