[package]
name = "tree-sitter-cloudflare"
description = "cloudflare grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "cloudflare"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-cloudflare"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["dep:tree-sitter"]
c2rust = ["dep:tree-sitter-c2rust"]

[dependencies]
tree-sitter = { version = "~0.20.3", optional = true } 
tree-sitter-c2rust = { version = "0.20.10", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["blocking"] }
